# seminario-foundation-models

./: .gitignore  README.md  requirements.txt  sam_preprocessing.ipynb
faiss/: embedding_extraction.ipynb  embedding_extraction_blank.ipynb  embeddings_mapping.csv  image_embeddings.index  pyproject.toml
sam/: pyproject.toml  sam_preprocessing.ipynb
