[tool.poetry]
name = "faiss"
version = "0.1.0"
description = ""
authors = ["marta martinez <marta.martinez@newtral.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
torch = "^2.5.0"
pillow = "^11.0.0"
faiss-cpu = "^1.9.0"
tqdm = "^4.66.5"
clip = {git = "https://github.com/openai/CLIP.git", rev = "a1d071733d7111c9c014f024669f959182114e33"}
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
pandas = "^2.2.3"
nbformat = "5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
